Adding CurrentDate Validator - test missing

--- a/worblehat-web/src/main/resources/ValidationMessages.properties
+++ b/worblehat-web/src/main/resources/ValidationMessages.properties
@@ -12,6 +12,7 @@ notvalid.bookDataFormData.edition=Edition is not valid
 notvalid.bookDataFormData.isbn=ISBN is not valid
 notvalid.bookDataFormData.yearOfPublication=Year is not valid
 invalid.length.bookDataFormData.yearOfPublication=Year is not valid
+invalid.date.bookDataFormData.yearOfPublication=The year is in the future. Please choose a year less or equals to current year.
 
 # Borrow book form
 notvalid.borrowCmd.isbn=ISBN is not valid
