--- a/worblehat-web/src/main/resources/ValidationMessages.properties
+++ b/worblehat-web/src/main/resources/ValidationMessages.properties
@@ -19,11 +19,11 @@ notvalid.borrowCmd.isbn=ISBN is not valid
 empty.borrowCmd.isbn=ISBN is mandatory
 notvalid.borrowCmd.email=Email is not valid
 empty.borrowCmd.email=Email is mandatory
-
 # Return all books form
 empty.returnAllBookFormData.emailAddress=Email is mandatory
 notvalid.returnAllBookFormData.emailAddress=Email is not valid
-
 # Default messages for custom validators
 de.codecentric.psd.worblehat.web.validation.ISBN=ISBN is not valid
 de.codecentric.psd.worblehat.web.validation.Numeric=Value has to be numeric
+de.codecentric.psd.worblehat.web.validation.CurrentDate=Date is not valid
+de.codecentric.psd.worblehat.web.validation.CustomEmail=Email is not valid
