- add column 'Description' to book table - add migration - show description on booklist grid - add input for description to the insertBook form - add tests

--- a/worblehat-web/src/main/resources/ValidationMessages.properties
+++ b/worblehat-web/src/main/resources/ValidationMessages.properties
@@ -11,6 +11,7 @@ empty.bookDataFormData.isbn=ISBN is mandatory
 notvalid.bookDataFormData.edition=Edition is not valid
 notvalid.bookDataFormData.isbn=ISBN is not valid
 notvalid.bookDataFormData.yearOfPublication=Year is not valid
+invalid.length.bookDataFormData.description=Description is greater than 255 digits
 invalid.length.bookDataFormData.yearOfPublication=Year is not valid
 invalid.date.bookDataFormData.yearOfPublication=The year is in the future. Please choose a year less or equals to current year.
 
